downgrade to JDK 1.8